# Crystal_DAkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mirrow_gitee.yml
src/cdakit/: find_spg.py  iotools.py  log.py  main.py  match_structure.py  parse_outcar.py  prepare_calypso.py  prepare_vasp.py  standardize.py
src/crystal_dakit/: cli.py
test/test_vasp_dir/: 1.vasp
test/test_vasp_dir.scf/1/: INCAR  KPOINTS  POSCAR
